Fix overflow for long glyph names

--- a/css/scss/_glyph-inspector.scss
+++ b/css/scss/_glyph-inspector.scss
@@ -37,6 +37,7 @@
     p {
       font: 500 var(--ms0)/1.2 var(--ui-monospaced);
       margin-bottom: 1em;
+      overflow-wrap: break-word;
     }
   }
 }
